--- a/index.html
+++ b/index.html
@@ -30,6 +30,57 @@
                 <h1>Formulário de matrícula</h1>
                 <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã.s</p>
 
+                <form action="" method="post" enctype="multipart/form-data">
+
+                    <fieldset class="kids-info">
+                        <legend>Informações da criança</legend>
+
+                        <div class="input-wrapper">
+                            <label for="fullname">Nome completo</label>
+                            <input type="text" 
+                                    name="fullname" 
+                                    id="fullname" 
+                                    placeholder="Qual o nome da criança">
+                        </div>
+
+                        <div class="inpur-wrapper">
+                            <label for="birth">Data de nascimento </label>
+                            <input type="date" name="birth" id="birth" lang="pt-br">
+                        </div>
+
+                        <div class="select-wrapper">
+                            <label for="gender">Sexo</label>
+                            <select name="gender" id="gender">
+                                <option value="female">Feminino</option>
+                                <option value="male">Masculino</option>
+                                <option value="na">Prefiro nao responder</option>
+                            </select>
+                        </div>
+
+                        <div class="textarea-wrapper">
+
+                            <label for="medical-info">Informações médicas</label>
+                            <textarea name="medical-info" id="medical-info"
+                            cols="30" rows="10"
+                            placeholder="a criança possui alguma condicao medica?"
+                            ></textarea>
+
+                        </div>
+
+
+                        <div class="droparea-wrapper">
+                            <input type="file" id="birth-file" name="birth-file">
+                            <img src="assets/icons/cloud-upload.svg" alt="">
+                            <p>Clique aqui para selecionar arquivos</p>
+                        </div>
+
+                        
+                    </fieldset>
+
+
+                </form>
+
+
 
             </div>
         </main>
