--- a/index.html
+++ b/index.html
@@ -134,6 +134,114 @@
 
                     </fieldset>
 
+                    <fieldset class="guardian">
+                        <legend> Informações do responsável </legend>
+
+                        <div class="input-wrapper">
+                            <label for="guardian">Nome do responsável</label>
+                            <input type="text" id="guardian" name="guardian">
+                            <small>Principal responsável legal e contato de emergência</small>
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label for="phone">Telefone</label>
+                            <input type="tel" id="phone" name="phone"
+                            placeholder="(10) 9 8765-4321">
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label for="mail">Email</label>
+                            <input type="email" name="mail" id="mail"
+                            required>
+
+                            <div class="error">
+                                <img src="assets/icons/alert-circle.svg" alt="icone de erro vermelho">
+                                <span>Insira um e-mail válido</span>
+                            </div>
+                        </div>
+
+                    </fieldset>
+
+                    <fieldset class="enroll-options">
+                        <legend>Opções de matrícula</legend>
+
+                        <div class="intput-wrapper">
+                            <label for="">Selecione o turno de estudo</label>
+
+                            <div class="radio-wrapper">
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="study-shift" value="mornig" id="mornig">
+                                    <img src="assets/icons/sun-cloud-02.svg" alt="icone sol com nuvem">
+                                    <label for="mornig">Manhã</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="study-shift" value="evening" id="evening">
+                                    <img src="assets/icons/sun-02.svg" alt="icone sol com nuvem">
+                                    <label for="evening">Tarde</label>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label for="">Em qual esporte você gostaria de inscrever seu filho?</label>
+                            <div class="radio-wrapper">
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="basketball">
+                                    <img src="assets/icons/football.svg" alt="futebol">
+                                    <label for="football">Futebol</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="basketball">
+                                    <img src="assets/icons/basketball-02.svg" alt="basquete">
+                                    <label for="basketball">Basquete</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="swimming">
+                                    <img src="assets/icons/swimming.svg" alt="natacao">
+                                    <label for="swimming">Natação</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="yoga">
+                                    <img src="assets/icons/yoga-02.svg" alt="yoga">
+                                    <label for="yoga">Yoga</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="volleyball">
+                                    <img src="assets/icons/volleyball.svg" alt="voley">
+                                    <label for="volleyball">Yoga</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-image"></div>
+                                    <input type="radio" name="sport" id="boxing">
+                                    <img src="assets/icons/boxing-glove-01.svg" alt="boxing">
+                                    <label for="boxing">Boxing</label>
+                                </div>
+
+
+                                
+
+                            </div>
+                        </div>
+
+                    </fieldset>
+
                 </form>
             </div>
         </main>
